force-app/main/default/objects/OrphanedProject__c/OrphanedProject__c.object-meta.xml
<CustomObject>
    <label>Orphaned Project</label>
    <nameField>
        <label>Orphaned Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orphaned Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>