force-app/main/default/objects/OrphanedProject__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF( ISBLANK(Occurrence__c), &quot;Volunteer Opportunity&quot;, &quot;Occurrence&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>