force-app/main/default/objects/OrphanedProject__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>VolunteerOpportunity__r.HOC__Street__c + &apos; &apos; + 
VolunteerOpportunity__r.HOC__City__c + &apos; &apos; +
VolunteerOpportunity__r.HOC__State_Province__c + &apos; &apos; +
VolunteerOpportunity__r.HOC__Zip_Postal_Code__c + &apos; &apos; +
VolunteerOpportunity__r.HOC__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>