force-app/main/default/objects/OrphanedProject__c/fields/Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Occurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occurrence</label>
    <referenceTo>HOC__Occurrence__c</referenceTo>
    <relationshipLabel>Orphaned Projects</relationshipLabel>
    <relationshipName>OrphanedProjects</relationshipName>
    <type>Lookup</type>
</CustomField>