force-app/main/default/objects/OrphanedProject__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <formula>IF(ISBLANK(Occurrence__c),
TEXT(MONTH(VolunteerOpportunity__r.HOC__Start_Date__c))+&quot;/&quot; +TEXT(DAY(VolunteerOpportunity__r.HOC__Start_Date__c))+&quot;/&quot; +TEXT(YEAR(VolunteerOpportunity__r.HOC__Start_Date__c)),
TEXT(MONTH(DATEVALUE(Occurrence__r.HOC__Start_Date_Time__c)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Occurrence__r.HOC__Start_Date_Time__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Occurrence__r.HOC__Start_Date_Time__c))) + &quot; &quot; + TEXT(VALUE(MID(TEXT(TIMEVALUE(Occurrence__r.HOC__Start_Date_Time__c)), 0,2)) - $CustomMetadata.BostonCaresSetting__mdt.DefaultBostonCaresSettings.TimezoneOffset__c) + MID(TEXT(TIMEVALUE(Occurrence__r.HOC__Start_Date_Time__c)), 3,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date/Time</label>
    <type>Text</type>
</CustomField>