force-app/main/default/objects/OrphanedProject__c/fields/VolunteerLeader__c.field-meta.xml
<CustomField>
    <fullName>VolunteerLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to keep track of the volunteer leader that is claiming an orphaned project.</description>
    <label>Volunteer Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>OrphanedProjects</relationshipName>
    <type>Lookup</type>
</CustomField>