force-app/main/default/objects/OrphanedProject__c/fields/VolunteerLeaderEmail__c.field-meta.xml
<CustomField>
    <fullName>VolunteerLeaderEmail__c</fullName>
    <label>Volunteer Leader Email</label>
    <type>Email</type>
</CustomField>