force-app/main/default/objects/OrphanedProject__c/fields/VolunteerOpportunity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the parent Volunteer Opportunity record.</description>
    <label>Volunteer Opportunity</label>
    <referenceTo>HOC__Volunteer_Opportunity__c</referenceTo>
    <relationshipName>OrphanedProjects</relationshipName>
    <type>Lookup</type>
</CustomField>