force-app/main/default/objects/OrphanedProject__c/recordTypes/Orphaned_Occurrence.recordType-meta.xml
<RecordType>
    <fullName>Orphaned_Occurrence</fullName>
    <active>true</active>
    <label>Orphaned Occurrence</label>
</RecordType>