force-app/main/default/objects/OrphanedProject__c/recordTypes/Orphaned_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Orphaned_Opportunity</fullName>
    <active>true</active>
    <label>Orphaned Opportunity</label>
</RecordType>