force-app/main/default/objects/OrphanedProject__c/recordTypes/OrphanedOccurrence.recordType-meta.xml
<RecordType>
    <fullName>OrphanedOccurrence</fullName>
    <active>true</active>
    <label>Orphaned Occurrence</label>
</RecordType>