force-app/main/default/objects/OrphanedProject__c/recordTypes/OrphanedOpportunity.recordType-meta.xml
<RecordType>
    <fullName>OrphanedOpportunity</fullName>
    <active>true</active>
    <label>Orphaned Opportunity</label>
</RecordType>